--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.2",
+    "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
+    "preval.macro": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -40,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.159",
+    "@types/preval.macro": "^3.0.0",
+    "@types/web-bluetooth": "0.0.8",
     "gh-pages": "^3.1.0"
   }
 }
